<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="account_type">com.thoughtworks.youthzone.login</string>
    <string name="app_name"><b>Me</b></string>
    <string name="app_package">com.thoughtworks.youthzone</string>
    <string name="welcome">Welcome %s</string>
    <string name="logout_button">Logout</string>
    <string name="staff_name">Staff name:</string>
    <string name="get_started">Get Started</string>
    <string name="fetch_contacts_button">Fetch Contacts</string>
    <string name="fetch_accounts_button">Fetch Accounts</string>
    <string name="clear_button">Clear</string>
    <string name="title_activity_pick_project">Pick a Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pick_project">Pick a Project</string>
    <string name="title_activity_pick_member">Pick a Member</string>
    <string name="search_hint">Search members</string>
    <string name="title_activity_select_evaluation">Evaluation Options</string>
    <string name="new_evaluation">New evaluation</string>
    <string name="title_activity_pick_theme">Choose a Theme</string>
    <string name="project_member_default_text">Project Member</string>
    <string name="save_in_progress_button">Save for later</string>
    <string name="complete_evaluation_button">Submit evaluation</string>
    <string name="title_activity_question">Choose Rating</string>
    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="continue_previous_evaluation">Continue previous evaluation</string>
    <string name="view_previous_evaluations">View previous evaluations</string>
    <string name="title_activity_pick_in_progress_evaluation">Choose Evaluation</string>
    <string name="title_activity_private_comment">Add Comment</string>
    <string name="save_comment">Done</string>
    <string name="add_comment_button">Add comment</string>
    <string name="add_member_comments">Add member comment</string>
    <string name="title_activity_member_comment">Add Member Comment</string>
    <string name="title_activity_theme_review">ThemeReviewActivity</string>

</resources>
