<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thoughtworks.youthzone.PickOutcomeActivity" >

    <ListView
        android:id="@+id/themes_listview"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >
    </ListView>
    
    <Button
       android:id="@+id/add_comment_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/themes_listview"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="24dp"
       android:onClick="onAddCommentClick"
       android:text="@string/add_comment_button"
       android:background="@drawable/onside_button_selector"
       android:textAppearance="@style/OnsideButton" />

   <Button
       android:id="@+id/complete_evaluation_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="150dp"
       android:onClick="onSubmitEvaluationClick"
       android:text="@string/complete_evaluation_button"
       android:background="@drawable/onside_button_selector"
       android:textAppearance="@style/OnsideButton" />

   <Button
       android:id="@+id/submit_in_progress_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/complete_evaluation_button"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="38dp"
       android:onClick="onSubmitEvaluationClick"
       android:text="@string/save_in_progress_button"
       android:background="@drawable/onside_button_selector"
       android:textAppearance="@style/OnsideButton" />

</RelativeLayout>